2006-01-09  Senganal T <tsenganal@novell.com>
	* RelatedDataView.cs
	* DataColumn.cs
		- Resolving a name clash in IExpression

2006-01-06  Senganal T <tsenganal@novell.com>
	
	* DataColumn.cs
	* DataColumnCollection.cs
		- Reset the Parameters of DataColumn to Default Values when 
		column is removed from the Table's Collection

2006-01-03  Senganal T <tsenganal@novell.com>

	* DataTable.cs :
		- ParseSortString() : Changed the way the sort string is parsed.
		Using a regex to parse the string.Fixes bug #77104

2005-12-12  Konstantin Triger <kostat@mainsoft.com>

	* DataRow.cs: Added index Updates.
		EndEdit() fixed to first update indices and then AssertConstraints
		based on those indices.
		Added Validate() and AssertConstraints() functions.
	* DataRowCollection.cs: Removed ValidateDataRowInternal().
	* DataTable: Fixed Clear().

2005-12-06  Atsushi Enomoto  <atsushi@ximian.com>

	* CustomDataClassGenerator.cs : (InitializeFields) handle AllowDBNull
	  and DefaultValue as well. Patch by Marek Habersack (bug #76709).

2005-12-01  Miguel de Icaza  <miguel@novell.com>

	* DataSet.cs: Apply patch from Robert Jordan, to fix #76817

2005-11-26  Konstantin Triger <kostat@mainsoft.com>

	* ConflictOption.cs: TARGET_JVM include.

2005-11-11  Senganal T <tsenganal@novell.com>
	
	* ConflictOption.cs (new file)
		- Added ConflictOption Enumeration 
	* DataTableReader.cs
	* IDataRecord2.cs 
		- GetProviderSpecificFieldType : Corrected the method name

2005-11-11  Senganal T <tsenganal@novell.com>

	* DataSet.cs : Added the SchemaSerializationMode Property for NET_2_0
	compatibility.
	* SchemaSerializationMode.cs : Added SchemaSerializationMode Enumeration
	for NET_2_0 compatibility.

	Fixes bug #76517

2005-10-20  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaWriter.cs : escape names in the schema with XmlConvert.
	  Fixed bug #76480.

2005-10-14  Sureshkumar T  <tsureshkumar@novell.com>

	* DataView.cs: Correct multiple throwing of events. Patch from
	Marc Haisenko.